--- a/.env
+++ b/.env
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.zenhosting.pro
+MAIL_HOST=
 MAIL_PORT=587
-MAIL_USERNAME=riadh@zenhosting.pro
-MAIL_PASSWORD=8pCK4nIA
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=riadh@zenhosting.pro
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
